# mass-apk-installer

./: .coveragerc  .flake8  .gitignore  Pipfile  README.md  apk_mass_install.py  mass_apk_installer.py  mypy.ini  pyproject.toml
.github/: dependabot.yml
mass_apk/: __init__.py  __main__.py  adb.py  apk.py  cli.py  commands.py  exceptions.py  helpers.py  ziptools.py
massapk/: __init__.py  __main__.py  adb.py  apk.py  cli.py  commands.py  exceptions.py  helpers.py  ziptools.py
scripts/: README.md  back_zip.bat  backup.bat  backup.sh  backup_encrypted_archive  backup_encrypted_archive.bat  backup_encrypted_zip  backup_encrypted_zip.bat  backup_osx.sh  backup_osx_zip.sh  backup_win.bat  backup_zip.sh  install_osx.sh  install_win.bat  restore.bat  restore.sh  run_linux.sh  run_osx.sh  run_win.bat
source/: LICENSE  README.md  apk_mass_install.py  apk_mass_install_win.py  archive.py  depedencies.txt  encryption.py  sqlite_support.py
source/osx/: apk_mass_install.py  archive_support.py  backup.db  encryption_support.py  setup.py
source/win/: apk_mass_install.py
tests/: test_mass_apk.py
tools/: archive.py  encryption.py
