[tool.poetry]
name = "massapk"
version = "0.3.1"
description = "Automate apk related tasks on android phones"
authors = ["binary-signal <binary-signal@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
