[tool.poetry]
name = "mass_apk"
version = "0.3.1"
description = "Automate apk related tasks on android phones"
authors = ["binary-signal <binary-signal@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/binary-signal/mass-apk-installer"
repository = "https://github.com/binary-signal/mass-apk-installer.git"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "mass_apk" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
mypy = "^0.790"
pylint = "^2.5.2"
isort = {extras = ["pyproject"], version = "^5.4.1"}
autopep8 = "^1.5.3"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
flake8-mypy = "^17.8.0"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.3"
flake8-builtins = "^1.5.3"
flake8-annotations-coverage = "^0.0.4"
flake8-annotations = "^2.1.0"
flake8-typing-imports = "^1.9.0"
flake8-bandit = "^2.1.2"
flake8-todo = "^0.7"
flake8-quotes = "^3.2.0"
flake8-string-format = "^0.3.0"
flake8-broken-line = "^0.2.0"
pep8-naming = "^0.11.1"
darglint = "^1.6.0"
seed-isort-config = "^2.2.0"
pydocstyle = "^5.1.1"
flakehell = "^0.7.0"
pytest = "^6.1.1"
coverage = "^5.3"


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = false
line_length = 88
combine_as_imports = true

[tool.autopep8]
max_line_length = 88


[tool.poetry.scripts]
mass-apk = 'mass_apk.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
